fix bug with border in safari on ios

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ a.d-flex.flex-column.align-items-center:hover {
     border-left: 2px solid #005AAA;
     background: #F3F3F3;
     border-image: linear-gradient(to bottom, #e72b70, #005aaa) 1 100%;
+    border-width: 0 0 0 2pt;
 }
 
 .main_right-menu-item:hover {
